include(GenerateExportHeader)

set(LIBSTORE_LIB_SRC
)

add_library(store SHARED ${LIBSTORE_LIB_SRC})
set_property(TARGET store PROPERTY C_STANDARD 99)
GENERATE_EXPORT_HEADER(store
	EXPORT_MACRO_NAME LIBSTORE_API
	EXPORT_FILE_NAME api.h
	DEPRECATED_MACRO_NAME LIBSTORE_DEPRECATED
	NO_EXPORT_MACRO_NAME LIBSTORE_NO_EXPORT
	STATIC_DEFINE LIBSTORE_STATIC
	NO_DEPRECATED_MACRO_NAME LIBSTORE_NO_DEPRECATED
)

add_library(storestatic STATIC ${LIBSTORE_LIB_SRC})
set_property(TARGET storestatic PROPERTY C_STANDARD 99)
