include(GenerateExportHeader)

set(LIBSTORE_LIB_SRC
	encoding.c
	memory.c
	parser.c
	report.c
	store.c
)

set(LIBSTORE_TYPES_STL_SRC
	types/stl/list.cpp
	types/stl/map.cpp
	types/stl/string.cpp
)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_BINARY_DIR})

add_library(store SHARED ${LIBSTORE_LIB_SRC} ${LIBSTORE_TYPES_STL_SRC})
set_property(TARGET store PROPERTY C_STANDARD 99)
GENERATE_EXPORT_HEADER(store
	EXPORT_MACRO_NAME LIBSTORE_API
	EXPORT_FILE_NAME api.h
	DEPRECATED_MACRO_NAME LIBSTORE_DEPRECATED
	NO_EXPORT_MACRO_NAME LIBSTORE_NO_EXPORT
	STATIC_DEFINE LIBSTORE_STATIC
	NO_DEPRECATED_MACRO_NAME LIBSTORE_NO_DEPRECATED
)

add_library(storestatic STATIC ${LIBSTORE_LIB_SRC} ${LIBSTORE_TYPES_STL_SRC})
set_property(TARGET storestatic PROPERTY C_STANDARD 99)
